Fixes #2890 - Auto-Complete on Typing for Tags is hidden behind Pop-Up Windows.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -7042,7 +7042,7 @@ footer {
 
 /* allow/show autocomplete in modal dialog */
 .ui-autocomplete.ui-widget-content {
-  @extend .zIndex-8;
+  @extend .zIndex-9;
   position: absolute;
   max-height: 380px;
   overflow: auto;
